--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-scroll": "^1.8.1",
+    "react-scroll-up-button": "^1.6.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
