--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "react-particles-js": "^3.4.1"
+    "react-particles-js": "^3.4.1",
+    "react-scroll": "^1.8.1"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
